Fixed bug 454594: Compile failure in I20141209-0800